--- a/openquake/server/templates/engine/index.html
+++ b/openquake/server/templates/engine/index.html
@@ -33,6 +33,12 @@
           {% endif %}
           <div class="span12">
             <h2>List of calculations{% if server_name %} from {{ server_name }}{% endif %}</h2>
+            <div id="tag-filters">
+                <label for="list_preferred_only">
+                    <input type="checkbox" id="list_preferred_only" name="list_preferred_only">
+                    List preferred only
+                </label>
+            </div>
             <div id="my-calculations" class="well"></div>
           </div>
         </div>
