Add the possibility to filter the list of calculations by a given tag name

--- a/openquake/server/templates/engine/index.html
+++ b/openquake/server/templates/engine/index.html
@@ -36,7 +36,7 @@
             <div id="tag-filters">
                 <label for="list_preferred_only">
                     <input type="checkbox" id="list_preferred_only" name="list_preferred_only">
-                    List preferred only
+                    List preferred calculations only
                 </label>
             </div>
             <div id="my-calculations" class="well"></div>
