Add a dropdown menu to select one of the available tags and filter the list of calculations by it

--- a/openquake/server/templates/engine/index.html
+++ b/openquake/server/templates/engine/index.html
@@ -38,6 +38,10 @@
                     <input type="checkbox" id="list_preferred_only" name="list_preferred_only">
                     List preferred calculations only
                 </label>
+                <label for="tag_selector">Filter by tag:</label>
+                <select id="tag_selector" class="form-control" style="width: 200px;">
+                    <option value="">All tags</option>
+                </select>
             </div>
             <div id="my-calculations" class="well"></div>
           </div>
