Sum 'structural', 'nonstructural' and 'contents' into 'economic' losses; add buttons to move from full table to summary and vice versa

--- a/openquake/server/static/css/engine.css
+++ b/openquake/server/static/css/engine.css
@@ -424,6 +424,10 @@ tr.asce_output {
     margin-bottom: 3px;
 }
 
+#summary-btn {
+    margin-top: 10px;
+}
+
 .outputs-general-btns-left,
 .outputs-general-btns-center,
 .outputs-general-btns-right {
