--- a/openquake/server/templates/engine/show_table.html
+++ b/openquake/server/templates/engine/show_table.html
@@ -38,6 +38,15 @@
                 {% endfor %}
               </tbody>
             </table>
+            {% if internal_name == 'aggrisk_tags' %}
+            <div id="summary-btn">
+              {% if is_summary %}
+              <a href="{{ oq_engine_server_url }}/v1/calc/{{ calc_id }}/extract_html_table/aggrisk_tags?summarize=0" class="btn btn-sm">Show full table</a>
+              {% else %}
+              <a href="{{ oq_engine_server_url }}/v1/calc/{{ calc_id }}/extract_html_table/aggrisk_tags?summarize=1" class="btn btn-sm">Show summary</a>
+              {% endif%}
+            </div>
+            {% endif %}
           </div>
         </div>
       </div>
