--- a/openquake/server/templates/engine/base.html
+++ b/openquake/server/templates/engine/base.html
@@ -41,7 +41,7 @@
                 <li class="admin"><a href="{% url 'admin:index' %}">Admin</a></li>
                 {% endif %}
                 {% if user.is_superuser or user.level >= 2 %}
-                <li class="admin"><a href="{% url 'tagadmin:index' %}">Manage tags</a></li>
+                <li class="admin"><a href="{% url 'tagadmin:db_jobtag_changelist' %}">Manage tags</a></li>
                 {% endif %}
               </ul>
             </nav>
