Change plot titles and the label of the button to display the plot

--- a/openquake/server/templates/engine/get_outputs_aelo.html
+++ b/openquake/server/templates/engine/get_outputs_aelo.html
@@ -36,7 +36,7 @@
               {% if pngs.governing_mce %}
               <div class="my-pngs">
                 <a href="{{ oq_engine_server_url }}/v1/calc/{{ calc_id }}/download_png/governing_mce.png" class="btn btn-sm">
-                  Show Multi-Period MCEr Spectrum</a>
+                  Show ASCE 7 MCEr Spectrum</a>
               </div>
               {% endif %}
             </div>
