Show a warning if Vs30 < 200m/s, when selecting the site class or inputing the value, and in the outputs pages

--- a/openquake/server/templates/engine/index.html
+++ b/openquake/server/templates/engine/index.html
@@ -132,6 +132,19 @@
       </div>
     </div>
   </div>
+  <!-- Generic modal -->
+  <div id="genericModal" class="modal hide fade">
+    <div class="modal-header">
+      <a class="close" data-dismiss="modal">×</a>
+      <h3 id="genericModalTitle">Message</h3>
+    </div>
+    <div class="modal-body" id="genericModalBody">
+      <!-- dynamic text goes here -->
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal">OK</button>
+    </div>
+  </div>
   {% endblock templates %}
 
   {% block extra_script %}
