--- a/openquake/server/templates/engine/license.html
+++ b/openquake/server/templates/engine/license.html
@@ -2,6 +2,13 @@
 
   <title>{% block title %}OpenQuake engine: license{% endblock %}</title>
 
+  {% block nav-items %}
+  {{ block.super }}
+                <li class="calc">
+                    <a href="{% url "index" %}">Back to Calculations</a>
+                </li>
+  {% endblock nav-items %}
+
   {% block main %}
   {{ block.super }}
   <div class="content-wrap">
