--- a/openquake/server/templates/engine/show_table.html
+++ b/openquake/server/templates/engine/show_table.html
@@ -1,6 +1,14 @@
 {% extends "engine/base.html" %}
 {% load servertags %}
 <title>{% block title %}OpenQuake engine: {{ table_name }} from calculation {{ calc_id }}{% endblock %}</title>
+
+{% block nav-items %}
+{{ block.super }}
+              <li class="calc">
+                  <a href="{% url "index" %}">Back to Calculations</a>
+              </li>
+{% endblock nav-items %}
+
 {% block main %}
 {{ block.super }}
   <div class="content-wrap">
