--- a/openquake/server/templates/engine/base.html
+++ b/openquake/server/templates/engine/base.html
@@ -25,7 +25,7 @@
           <div class="span3">
             <a href="{% url "index" %}"><span class="nav-logo" style="background: url({{ STATIC_URL }}img/oq-logo-engine.png) no-repeat;"></span></a>
           </div>
-          <div class="span10">
+          <div class="span10 nav-engine-items">
             <nav class="main-nav">
               <ul>
                 {% block nav-items %}
