--- a/openquake/server/templates/engine/index.html
+++ b/openquake/server/templates/engine/index.html
@@ -3,7 +3,7 @@
 
   {% block nav-items %}
   {{ block.super }}
-                {% if application_mode != 'AELO' and application_mode != 'ARISTOTLE' and application_mode != 'READ_ONLY' %}
+                {% if application_mode != 'AELO' and application_mode != 'IMPACT' and application_mode != 'READ_ONLY' %}
                 <li class="calc">
                   <form class="calc-form form-horizontal"
                         enctype="multipart/form-data"
@@ -27,7 +27,7 @@
           </div>
           {% if application_mode == 'AELO' %}
           {% include './includes/aelo_form.html' %}
-          {% elif application_mode == 'ARISTOTLE' %}
+          {% elif application_mode == 'IMPACT' %}
           {% with './includes/impact_form_level_'|addstr:user_level|add:'.html' as template_path %}
           {% include template_path %}
           {% endwith %}
@@ -101,8 +101,8 @@
                 <% } %>
                 {% endif %}
 
-                <a href="{% url "index" %}/<%= calc.get('id') %>/{% if application_mode == 'AELO'%}outputs_aelo{% elif  application_mode == 'ARISTOTLE' %}outputs_impact{% else %}outputs{% endif %}" class="btn btn-sm calc-list-btn" style="margin: 2px 0 2px 0">Outputs</a>
-                  {% if application_mode != 'AELO' and application_mode != 'ARISTOTLE' and application_mode != 'READ_ONLY' and user_level > 0 %}
+                <a href="{% url "index" %}/<%= calc.get('id') %>/{% if application_mode == 'AELO'%}outputs_aelo{% elif  application_mode == 'IMPACT' %}outputs_impact{% else %}outputs{% endif %}" class="btn btn-sm calc-list-btn" style="margin: 2px 0 2px 0">Outputs</a>
+                  {% if application_mode != 'AELO' and application_mode != 'IMPACT' and application_mode != 'READ_ONLY' and user_level > 0 %}
                   <form class="calc-form" enctype="multipart/form-data"
                     style="margin: 0; display: inline-block"
                     method="post" action="{{ oq_engine_server_url }}/v1/calc/run">
