Move some css from engine.css to impact.css and aelo.css where it belongs

--- a/openquake/server/static/css/aelo.css
+++ b/openquake/server/static/css/aelo.css
@@ -139,3 +139,27 @@ tr.asce_output {
     padding: 0;
     border-top: 0;
 }
+
+.changelog {
+    width: 80%;
+    margin: 50px auto;
+    border-collapse: collapse;
+}
+.changelog th, .changelog td {
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: left;
+}
+.changelog th {
+    background-color: #f2f2f2;
+}
+
+.changelog td:nth-child(1), .changelog th:nth-child(1) {
+    width: 15%;
+}
+.changelog td:nth-child(2), .changelog th:nth-child(2) {
+    width: 15%;
+}
+.changelog td:nth-child(3), .changelog th:nth-child(3) {
+    width: 70%;
+}
