--- a/openquake/server/static/css/impact.css
+++ b/openquake/server/static/css/impact.css
@@ -115,3 +115,16 @@ table#impact-losses th td {
 #extracted_html_table tr:hover {
     background-color: #f1f1f1;
 }
+
+/* Hide all form elements except the submit button */
+.hidden_except_submit input:not([type="submit"]),
+.hidden_except_submit select,
+.hidden_except_submit textarea,
+.hidden_except_submit button:not([type="submit"]),
+.hidden_except_submit label {
+  display: none;
+}
+
+.hidden {
+    display: none;
+}
