Show a spinner while waiting for a response and write the corresponding description without altering the button text

--- a/openquake/server/static/css/engine.css
+++ b/openquake/server/static/css/engine.css
@@ -332,3 +332,7 @@ input[type="radio"] {
   margin-right: 5px; /* Space between radio button and label text */
 }
 
+.loading-spinner {
+    width: 18px;
+    height: 18px;
+}
