--- a/openquake/server/templates/engine/includes/aelo_form.html
+++ b/openquake/server/templates/engine/includes/aelo_form.html
@@ -51,5 +51,7 @@
               </table>
               <button id="submit_aelo_calc" type="submit" class="btn">Submit</button>
               <!-- <input type="submit"> -->
+              <br/>
+              <span class="submit_aelo_calc_waiting"></span>
             </form>
           </div>
