--- a/openquake/server/templates/engine/includes/impact_run_form.html
+++ b/openquake/server/templates/engine/includes/impact_run_form.html
@@ -67,4 +67,6 @@
               <div class="impact_form_row">
                 <button id="submit_impact_calc" type="submit" class="btn" disabled>Launch impact calculation</button>
                 <!-- <input type="submit"> -->
+                <br/>
+                <span class="submit_impact_calc_waiting"></span>
               </div>
