Use spinner also while loading stations from the USGS; while doing it, disable fields usgs_id and shakemap_version to avoid inconsistencies

--- a/openquake/server/templates/engine/includes/impact_run_form.html
+++ b/openquake/server/templates/engine/includes/impact_run_form.html
@@ -50,6 +50,7 @@
                 <input class="impact-input" type="text" id="station_data_file_loaded" name="station_data_file_loaded" disabled />
                 <button type="button" class="station-btn" id="clearStationDataFromUsgs">Clear Data</button>
                 <button type="button" class="station-btn" id="getStationDataFromUsgs">Retrieve from the USGS</button>
+                <span id="get_stations_from_usgs_waiting"></span>
               </div>
               <div class="impact_form_row hidden-for-shakemap hidden">
                 <label for"station_data_file">{{ impact_form_labels.station_data_file }}</label>
